Add AssertJ as an alternative to the standard JUnit assertions utility class